Fix: UI bug on mobile

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -1,5 +1,6 @@
 .card {
   overflow: auto;
+  overflow-x: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
