--- a/src/pages/Home/components/RecommendedTime/recommendedTime.module.scss
+++ b/src/pages/Home/components/RecommendedTime/recommendedTime.module.scss
@@ -12,6 +12,8 @@
 }
 
 .wrap__uploader {
+  max-width: 325px;
+  width: 100%;
   margin-top: auto;
 }
 
